# SEIR-WS

./: Cargo.toml
src/: main.rs  seir.rs
static/: index.html
